- Adds nembed - Redesigns NIP-19 returns to allow nembeds and give more nuance to the UI.